--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   },
   "dependencies": {
     "coolgame-cc": "^0.0.10",
-    "coolgame-cc-sys-fui": "^0.0.4",
+    "coolgame-cc-sys-fui": "^0.0.5",
     "coolgame-cc-sys-time": "^0.0.3",
     "fairygui-ccc370": "^1.0.7",
+    "gnfun": "^0.0.11",
     "gulp": "^4.0.2",
     "gulp-tinypng-with-cache-rdd-mod": "^1.0.4",
     "spark-md5": "^3.0.2"
